# ComfyUI-VibeVoice

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  vibevoice_nodes.py
example_workflows/: VibeVoice_example.json
modules/: loader.py  model_info.py  patcher.py  utils.py
vibevoice/configs/: default_VibeVoice-Large_config.json  qwen2.5_1.5b_64k.json  qwen2.5_7b_32k.json
vibevoice/modular/: configuration_vibevoice.py  modeling_vibevoice_inference.py  sage_attention_patch.py
