[project]
name = "ComfyUI-VibeVoice"
description = "VibeVoice TTS. Expressive, long-form, multi-speaker conversational audio"
version = "0.1.1"
license = {file = "LICENSE"}
dependencies = ["torch", "torchaudio", "librosa", "numpy", "huggingface_hub", "einops", "scipy", "tokenizers", "soundfile", "s3tokenizer", "tqdm", "conformer", "safetensors", "transformers", "diffusers"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-VibeVoice"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wildai"
DisplayName = "ComfyUI-VibeVoice"
Icon = ""



