[project]
name = "ComfyUI-VibeVoice"
description = "VibeVoice TTS. Expressive, long-form, multi-speaker conversational audio"
version = "1.4.1"
license = {file = "LICENSE"}
dependencies = ["torch", "torchaudio", "librosa", "numpy", "huggingface_hub", "einops", "scipy", "tokenizers", "soundfile", "s3tokenizer", "tqdm", "conformer", "safetensors", "transformers", "diffusers", "bitsandbytes"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-VibeVoice"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wildai"
DisplayName = "ComfyUI-VibeVoice"
Icon = ""















